# TradeMate

./: CMakeLists.txt  README.md  TechnicalAnalysis.h  vcpkg.json
